--- a/gui/designer_main.ui
+++ b/gui/designer_main.ui
@@ -250,32 +250,9 @@
                </widget>
               </item>
               <item>
-               <layout class="QVBoxLayout" name="verticalLayout_5" stretch="6,4">
-                <property name="topMargin">
-                 <number>12</number>
-                </property>
-                <property name="bottomMargin">
-                 <number>12</number>
-                </property>
+               <layout class="QVBoxLayout" name="verticalLayout_5">
                 <item>
                  <widget class="QLabel" name="lbl_plot">
-                  <property name="text">
-                   <string/>
-                  </property>
-                  <property name="alignment">
-                   <set>Qt::AlignCenter</set>
-                  </property>
-                  <property name="wordWrap">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QLabel" name="lbl_warning">
-                  <property name="styleSheet">
-                   <string notr="true">color: rgb(255, 7, 52); 
-font: 18pt &quot;Ubuntu&quot;;</string>
-                  </property>
                   <property name="text">
                    <string/>
                   </property>
