--- a/ddh/gui/designer_main.ui
+++ b/ddh/gui/designer_main.ui
@@ -41,7 +41,7 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -755,37 +755,51 @@
             </item>
             <item>
              <layout class="QFormLayout" name="formLayout">
-              <item row="0" column="0">
+              <item row="1" column="0">
                <widget class="QLabel" name="label">
                 <property name="text">
-                 <string>vessel name</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QLineEdit" name="lne_vessel"/>
-              </item>
-              <item row="1" column="0">
-               <widget class="QLabel" name="label_3">
-                <property name="text">
-                 <string>forget time (s)</string>
+                 <string>vessel</string>
                 </property>
                </widget>
               </item>
               <item row="1" column="1">
-               <widget class="QLineEdit" name="lne_forget"/>
+               <widget class="QLineEdit" name="lne_vessel"/>
               </item>
               <item row="2" column="0">
-               <widget class="QLabel" name="label_5">
+               <widget class="QLabel" name="label_3">
                 <property name="text">
-                 <string>current ones</string>
+                 <string>forget (s)</string>
                 </property>
                </widget>
               </item>
               <item row="2" column="1">
+               <widget class="QLineEdit" name="lne_forget"/>
+              </item>
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_5">
+                <property name="text">
+                 <string>load values</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
                <widget class="QPushButton" name="btn_load_current">
                 <property name="text">
-                 <string>load</string>
+                 <string>ok</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0">
+               <widget class="QLabel" name="label_4">
+                <property name="text">
+                 <string>restart DDH</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="1">
+               <widget class="QPushButton" name="btn_setup_apply">
+                <property name="text">
+                 <string>ok</string>
                 </property>
                </widget>
               </item>
@@ -816,27 +830,6 @@
             </item>
             <item>
              <layout class="QGridLayout" name="gridLayout_2">
-              <item row="1" column="0">
-               <widget class="QLabel" name="label_4">
-                <property name="text">
-                 <string>restart DDH</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="1">
-               <widget class="QPushButton" name="btn_setup_apply">
-                <property name="text">
-                 <string>apply</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QPushButton" name="btn_dl_purge">
-                <property name="text">
-                 <string>purge</string>
-                </property>
-               </widget>
-              </item>
               <item row="0" column="0">
                <widget class="QLabel" name="label_6">
                 <property name="text">
@@ -853,6 +846,13 @@
               </item>
               <item row="2" column="1">
                <widget class="QPushButton" name="btn_his_purge">
+                <property name="text">
+                 <string>purge</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QPushButton" name="btn_dl_purge">
                 <property name="text">
                  <string>purge</string>
                 </property>
