--- a/ddh/gui/designer_main.ui
+++ b/ddh/gui/designer_main.ui
@@ -733,7 +733,7 @@
            </spacer>
           </item>
           <item>
-           <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,3,1,1,0,1">
+           <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,0,1,1,0,1">
             <property name="rightMargin">
              <number>6</number>
             </property>
@@ -754,13 +754,23 @@
              </spacer>
             </item>
             <item>
-             <layout class="QFormLayout" name="formLayout">
+             <layout class="QGridLayout" name="gridLayout_4" columnstretch="1,1">
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_5">
+                <property name="text">
+                 <string>load values</string>
+                </property>
+               </widget>
+              </item>
               <item row="1" column="0">
                <widget class="QLabel" name="label">
                 <property name="text">
                  <string>vessel</string>
                 </property>
                </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QLineEdit" name="lne_forget"/>
               </item>
               <item row="1" column="1">
                <widget class="QLineEdit" name="lne_vessel"/>
@@ -769,16 +779,6 @@
                <widget class="QLabel" name="label_3">
                 <property name="text">
                  <string>forget (s)</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="1">
-               <widget class="QLineEdit" name="lne_forget"/>
-              </item>
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_5">
-                <property name="text">
-                 <string>load values</string>
                 </property>
                </widget>
               </item>
